<resources>
    <string name="app_name">Online_Mobile_flexi_parking</string>
    <string name="action_save">Save</string>
    <string name="email">Email Address</string>
    <string name="Full_Name">Full Name</string>
    <string name="Card_NO">Identity Card Number</string>
    <string name="password">Password</string>
    <string name="Con_password">Enter again the password for validation</string>
    <string name="phone_number">Phone Number</string>
    <string name="car_plate">Car Plate Number</string>
    <string name="title_activity_register_page">register_page</string>
    <string name="title_activity_showdatabase">showdatabase</string>
    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="change_phone">Change Phone Number</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="update_account">Update Account</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="change_Email_Password">Change Email Or Password</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="remove_user">Remove user</string>
    <string name="prompt_password">Prompt password</string>
    <string name="google_place_api">AIzaSyC3YyrGhlxDc23Yzy-9Pi-yPCk7NdK2srs</string>

</resources>
